<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue_700"
    android:orientation="vertical"
    tools:context=".AboutActivity">
    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="5dp"
                android:layout_height="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="TELEKAKO! User Guide"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="match_parent">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="left"
                    android:text="@string/about_us1"
                    android:textSize="15sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="5dp"
                android:layout_height="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="Purpose"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="match_parent">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/purpose"
                    android:textSize="15sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content">

                </TextView>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="5dp"
                android:layout_height="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="More Info"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="match_parent">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/more_info"
                    android:textSize="15sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content">

                </TextView>

            </androidx.cardview.widget.CardView>











        </LinearLayout>


    </ScrollView>

</LinearLayout>